--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="p5.min.js"></script>
-    <script src="addons/p5.dom.min.js"></script>
-    <script src="addons/p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
+    <script src="./p5.min.js"></script>
+    <script src="./addons/p5.dom.min.js"></script>
+    <script src="./addons/p5.sound.min.js"></script>
+    <script src="./sketch.js"></script>
     <style> 
       body {padding: 0; margin: auto;} 
     </style>
